--- a/index.html
+++ b/index.html
@@ -27,46 +27,37 @@
 
   <div class="top-bar" id="example-menu">
     <div class="top-bar-left">
-      <img
-        data-interchange="[assets/img/small.jpg, small], [assets/img/medium.jpg, medium], [assets/img/large.jpg, large]"
-        src="#" alt="" href="https://placeholder.com"><img src="https://via.placeholder.com/130x80">
+      <img src="assets/img/TNC LOGO 2020.jpg" class="logo" alt="Official TNATS logo containing small brown mamal">
     </div>
     <div class="top-bar-right">
       <ul class="dropdown menu" data-dropdown-menu>
         <li><a href="index.html">Home</a></li>
+        <li><a href="signtings.html">Sightings</a></li>
         <li>
           <a href="about.html">About Us</a>
           <ul class="menu vertical">
-            <li><a href="#.html">Club Members</a></li>
-            <li><a href="#.html">Events</a></li>
-            <li><a href="#.html">Our History</a></li>
-            <li><a href="#.html">Membership</a></li>
-            <li><a href="#.html">Awards</a></li>
+            <li><a href="clubmembers.html">Club Members</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="our_history.html">Our History</a></li>
+            <li><a href="membership.html">Membership</a></li>
+            <li><a href="awards.html">Awards</a></li>
           </ul>
         </li>
 
-        <!--<li>
-            <a href="#">Sponsors</a>
-            <ul class="menu vertical">
-              <li><a href="#.html">Our Sponsors</a></li>
-              <li><a href="#.html">Donations</a></li>
-            </ul>
-          </li>-->
+       
 
         <li>
           <a href="news.html">News</a>
           <ul class="menu vertical">
-            <li><a href="#.html">Newsletter</a></li>
-            <li><a href="#.html">Club Members</a></li>
-            <li><a href="#.html">Sightings</a></li>
-            <li><a href="#.html">Latest News</a></li>
-            <li><a href="#.html">Events</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="news.html">Latest News</a></li>
+            <li><a href="events.html">Events</a></li>
           </ul>
         </li>
 
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="admin/login.html">Login</a></li>
+        
         <!--<li><a href="#.html">Current Projects</a></li>
           <li><a href="#.html">Emergency Care</a></li>
           <li><a href="#.html">FAQ</a></li>-->
